# app/Http/Controllers/ForgotPasswordController.php
@@ -7,6 +7,9 @@ use Illuminate\Support\Facades\Password;
 use App\Helpers\Functions;
 use App\Http\Requests\ResetPasswordRequest;
 use App\ApiCode;
+use App\Models\User;
+use Illuminate\Support\Facades\Log;
+use Illuminate\Support\Facades\Validator;
 
 class ForgotPasswordController extends Controller
 {
@@ -127,5 +130,91 @@ class ForgotPasswordController extends Controller
         }
 
         return Functions::sendResponse([], 'Password has been successfully changed');
+    }
+
+
+
+
+
+
+    /**
+ * @OA\Post(
+ *     path="/api/password/changepassword",
+ *     summary="Change Password",
+ *     tags={"Change Password"},
+ *
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(
+ *                 type="object",
+ *
+ *                 @OA\Property(
+ *                     property="email",
+ *                     description="Email",
+ *                     example="email@gmail.com",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="password",
+ *                     description="Password",
+ *                     example="P@ssword1",
+ *                     type="string"
+ *                 ),
+ *                 @OA\Property(
+ *                     property="password_confirmation",
+ *                     description="Confirm Password",
+ *                     example="P@ssword1",
+ *                     type="string"
+ *                 ),
+ *             )
+ *          )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Operation successful",
+ *         @OA\MediaType(
+ *             mediaType="application/json"
+ *         )
+ *     ),
+ *
+ *     @OA\Response(
+ *         response=204,
+ *         description="Empty response",
+ *         @OA\MediaType(
+ *             mediaType="application/json"
+ *         )
+ *     )
+ * )
+ */
+    public function changepassword(Request $request){
+
+        try {
+            $validator = Validator::make($request->all(), [
+                'password' => 'required|confirmed|regex:/(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).*/',
+            ]);
+
+            if($validator->fails()){
+                return Functions::sendError($validator->errors()->first(), [], 400);
+            }
+
+            if(User::where('email', $request->email)->exists()){
+                User::where('email', $request->email)
+                ->update([
+                    'password' => bcrypt($request->password)
+                ]);
+
+                return Functions::sendResponse([], 'Password has been successfully changed');
+
+            }else{
+                return Functions::sendError("User doesn't exist", [], 404);
+            }
+
+
+        } catch (\Throwable $e) {
+            Log::info("Change Password Error - " . $e->getMessage());
+            return Functions::sendError("Operation Failed", [], 404);
+        }
+
     }
 }
